--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Home_User">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
         </activity>
+        <activity android:name=".Totalkcal_User" />
+        <activity android:name=".Register_Infirmation" />
+        <activity android:name=".Register_User" />
+        <activity android:name=".connect_user">
+
+        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
