--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Home_User">
-
-
-
-        </activity>
+        <activity android:name=".Login_user"></activity>
+        <activity android:name=".Home_User"></activity>
         <activity android:name=".Totalkcal_User" />
         <activity android:name=".Register_Infirmation" />
         <activity android:name=".Register_User" />
