--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    implementation 'com.android.support:appcompat-v7:29.1.1'
 }
