--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,29 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <activity android:name=".setting_user"></activity>
-        <activity android:name=".Login_user" />
-        <activity android:name=".Home_User" />
-        <activity android:name=".Totalkcal_User" />
-        <activity android:name=".Register_Infirmation" />
-        <activity android:name=".Register_User" />
-        <activity android:name=".connect_user">
+        android:theme="@style/AppTheme">
+        <!--Theme.AppCompat.DayNight.NoActionBar-->
+        <activity android:name=".setting_user"
+            android:theme="@style/AppTheme.NoActionbar"
+            ></activity>
+        <activity android:name=".Login_user"
+            android:theme="@style/AppTheme.NoActionbar"
+            ></activity>
+        <activity android:name=".Home_User"
+            android:theme="@style/AppTheme.NoActionbar"
+            ></activity>
+        <activity android:name=".Totalkcal_User"
+            android:theme="@style/AppTheme.NoActionbar"
+            ></activity>
+        <activity android:name=".Register_Infirmation"
+            android:theme="@style/AppTheme.NoActionbar"
+            ></activity>
+        <activity android:name=".Register_User"
+            android:theme="@style/AppTheme.NoActionbar"
+            ></activity>
+        <activity android:name=".connect_user"
+            android:theme="@style/AppTheme.NoActionbar"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
