--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,18 +24,22 @@
             ></activity>
         <activity android:name=".Register_Infirmation"
             android:theme="@style/AppTheme.NoActionbar"
-            ></activity>
+            >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity android:name=".Register_User"
             android:theme="@style/AppTheme.NoActionbar"
             ></activity>
         <activity android:name=".connect_user"
             android:theme="@style/AppTheme.NoActionbar"
             >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
     </application>
