--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,13 @@
             ></activity>
         <activity android:name=".Login_user"
             android:theme="@style/AppTheme.NoActionbar"
-            ></activity>
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Home_User"
             android:theme="@style/AppTheme.NoActionbar"
             ></activity>
@@ -32,11 +38,6 @@
         <activity android:name=".connect_user"
             android:theme="@style/AppTheme.NoActionbar"
             >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
     </application>
