--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
     implementation 'com.android.support:appcompat-v7:29.1.1'
     implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    // implementation "com.android.support:design:28.0.0"
+
 }
