--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         <!--Theme.AppCompat.DayNight.NoActionBar-->
         <activity android:name=".setting_user"
             android:theme="@style/AppTheme.NoActionbar"
-            ></activity>
+            >
+
+        </activity>
         <activity android:name=".Login_user"
             android:theme="@style/AppTheme.NoActionbar"
             >
@@ -24,7 +26,8 @@
         </activity>
         <activity android:name=".Home_User"
             android:theme="@style/AppTheme.NoActionbar"
-            ></activity>
+            >
+        </activity>
         <activity android:name=".Totalkcal_User"
             android:theme="@style/AppTheme.NoActionbar"
             ></activity>
