refactor(Mobile):เพิ้มหน้า edit เเละ เรียกข้อมูลลงมาเพื่อเเก้ไข (ยังเเก้ไขไม่ได้)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,39 +9,37 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--Theme.AppCompat.DayNight.NoActionBar-->
-        <activity android:name=".setting_user"
-            android:theme="@style/AppTheme.NoActionbar"
-            >
+        <activity android:name=".edit_information" >
 
-        </activity>
-        <activity android:name=".Login_user"
-            android:theme="@style/AppTheme.NoActionbar"
-            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity><!-- Theme.AppCompat.DayNight.NoActionBar -->
+        <activity
+            android:name=".setting_user"
+            android:theme="@style/AppTheme.NoActionbar" />
+        <activity
+            android:name=".Login_user"
+            android:theme="@style/AppTheme.NoActionbar">
+
         </activity>
-        <activity android:name=".Home_User"
-            android:theme="@style/AppTheme.NoActionbar"
-            >
-        </activity>
-        <activity android:name=".Totalkcal_User"
-            android:theme="@style/AppTheme.NoActionbar"
-            ></activity>
-        <activity android:name=".Register_Infirmation"
-            android:theme="@style/AppTheme.NoActionbar"
-            >
-        </activity>
-        <activity android:name=".Register_User"
-            android:theme="@style/AppTheme.NoActionbar"
-            ></activity>
-        <activity android:name=".connect_user"
-            android:theme="@style/AppTheme.NoActionbar"
-            >
-        </activity>
+        <activity
+            android:name=".Home_User"
+            android:theme="@style/AppTheme.NoActionbar" />
+        <activity
+            android:name=".Totalkcal_User"
+            android:theme="@style/AppTheme.NoActionbar" />
+        <activity
+            android:name=".Register_Infirmation"
+            android:theme="@style/AppTheme.NoActionbar" />
+        <activity
+            android:name=".Register_User"
+            android:theme="@style/AppTheme.NoActionbar" />
+        <activity
+            android:name=".connect_user"
+            android:theme="@style/AppTheme.NoActionbar" />
         <activity android:name=".MainActivity" />
     </application>
 
