--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.4'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     // implementation "com.android.support:design:28.0.0"
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:recyclerview-v7:29.0.0'
+    implementation 'com.xwray:groupie:2.7.0'
 }
