--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,9 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:29.1.1'
     implementation 'com.google.firebase:firebase-auth:16.0.4'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    // implementation "com.android.support:design:28.0.0"
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
+    implementation 'net.danlew:android.joda:2.10.3'
+    implementation "com.xwray:groupie:2.1.0"
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.android.support:recyclerview-v7:29.0.0'
-    implementation 'com.xwray:groupie:2.7.0'
 }
