--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,16 @@
         android:theme="@style/AppTheme">
         <activity android:name=".savedatafood_user"
             android:theme="@style/AppTheme.NoActionbar"
-            ></activity>
+            >
+
+
+        </activity>
         <activity
             android:name=".selectlistfood_user"
             android:theme="@style/AppTheme.NoActionbar"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan">
+
+        </activity>
         <activity
             android:name=".edit_information"
             android:theme="@style/AppTheme.NoActionbar" /> <!-- Theme.AppCompat.DayNight.NoActionBar -->
@@ -30,6 +35,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".Home_User"
