--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".savedatafood_user"
-            android:theme="@style/AppTheme.NoActionbar"
-            >
-
-
+        <activity android:name=".savedataexcercise_user"
+            android:theme="@style/AppTheme.NoActionbar">
         </activity>
+        <activity
+            android:name=".selectlistexcercise_user"
+            android:theme="@style/AppTheme.NoActionbar"
+            android:windowSoftInputMode="adjustPan">
+        </activity>
+        <activity
+            android:name=".savedatafood_user"
+            android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".selectlistfood_user"
             android:theme="@style/AppTheme.NoActionbar"
-            android:windowSoftInputMode="adjustPan">
-
-        </activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".edit_information"
             android:theme="@style/AppTheme.NoActionbar" /> <!-- Theme.AppCompat.DayNight.NoActionBar -->
@@ -29,13 +32,12 @@
             android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".Login_user"
-            android:theme="@style/AppTheme.NoActionbar">
+            android:theme="@style/AppTheme.NoActionbar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".Home_User"
