refactor(mobile):create ui addfood and debug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".savedataexcercise_user"
+        <activity android:name=".addfood_user"
+            android:theme="@style/AppTheme.NoActionbar"
+            ></activity>
+
+        <activity
+            android:name=".savedataexcercise_user"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".selectlistexcercise_user"
-            android:theme="@style/AppTheme.NoActionbar"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan">
-        </activity>
+            android:theme="@style/AppTheme.NoActionbar"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".savedatafood_user"
             android:screenOrientation="portrait"
@@ -27,7 +30,13 @@
             android:name=".selectlistfood_user"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".edit_information"
             android:screenOrientation="portrait"
@@ -39,20 +48,11 @@
         <activity
             android:name=".Login_user"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/AppTheme.NoActionbar"></activity>
         <activity
             android:name=".Home_User"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" >
-
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".Totalkcal_User"
             android:screenOrientation="portrait"
@@ -60,8 +60,7 @@
         <activity
             android:name=".Register_Infirmation"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" >
-            </activity>
+            android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".Register_User"
             android:screenOrientation="portrait"
