--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".addfood_user"
+        <activity android:name=".addexcercise_user"
             android:theme="@style/AppTheme.NoActionbar"
             ></activity>
-
+        <activity
+            android:name=".addfood_user"
+            android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".savedataexcercise_user"
             android:screenOrientation="portrait"
@@ -31,11 +33,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar"
             android:windowSoftInputMode="adjustPan">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".edit_information"
@@ -48,11 +46,18 @@
         <activity
             android:name=".Login_user"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar"></activity>
+            android:theme="@style/AppTheme.NoActionbar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".Home_User"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar" />
+
         <activity
             android:name=".Totalkcal_User"
             android:screenOrientation="portrait"
