--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,16 +49,19 @@
         <activity
             android:name=".setting_user"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" />
-        <activity
-            android:name=".Login_user"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Login_user"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionbar" >
+
 
         </activity>
         <activity
