refactor(Mobile):create code setting_user

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".addexcercise_user"
+        <activity android:name=".list_edit_food"
             android:theme="@style/AppTheme.NoActionbar"
-            ></activity>
-        <activity
-            android:name=".addfood_user"
-            android:theme="@style/AppTheme.NoActionbar" >
+            >
 
 
         </activity>
-
-
+        <activity
+            android:name=".addexcercise_user"
+            android:theme="@style/AppTheme.NoActionbar" />
+        <activity
+            android:name=".addfood_user"
+            android:theme="@style/AppTheme.NoActionbar"></activity>
         <activity
             android:name=".savedataexcercise_user"
             android:screenOrientation="portrait"
@@ -37,20 +38,19 @@
             android:name=".selectlistfood_user"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar"
-            android:windowSoftInputMode="adjustPan">
-
-        </activity>
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".edit_information"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" >
-
-        </activity> <!-- Theme.AppCompat.DayNight.NoActionBar -->
+            android:theme="@style/AppTheme.NoActionbar"></activity> <!-- Theme.AppCompat.DayNight.NoActionBar -->
         <activity
             android:name=".setting_user"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" >
-
+            android:theme="@style/AppTheme.NoActionbar"></activity>
+        <activity
+            android:name=".Login_user"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionbar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -58,20 +58,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Login_user"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" >
-
-
-        </activity>
-        <activity
             android:name=".Home_User"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" >
+            android:theme="@style/AppTheme.NoActionbar">
 
 
         </activity>
-
         <activity
             android:name=".Totalkcal_User"
             android:screenOrientation="portrait"
