--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,16 +56,18 @@
         <activity
             android:name=".Login_user"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" />
-        <activity
-            android:name=".Home_User"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar">
+            android:theme="@style/AppTheme.NoActionbar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Home_User"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionbar">
+
         </activity>
         <activity
             android:name=".Totalkcal_User"
