--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.android.material:material:1.0.0'
 
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+    implementation 'br.com.simplepass:loading-button-android:2.1.5'
+
 
 }
