--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".addexcerciser_user_private"
+        <activity android:name=".list_saveedit_excercise_menu_private"
             android:theme="@style/AppTheme.NoActionbar"
             ></activity>
+        <activity android:name=".model.modelSelectExcercise_Private"
+            android:theme="@style/AppTheme.NoActionbar"/>
+        <activity android:name=".list_edit_excercise_private"
+            android:theme="@style/AppTheme.NoActionbar"
+            />
+        <activity
+            android:name=".list_saveedit_food_menu_private"
+            android:theme="@style/AppTheme.NoActionbar" />
+        <activity
+            android:name=".list_edit_food_private"
+            android:theme="@style/AppTheme.NoActionbar" />
+        <activity
+            android:name=".addexcerciser_user_private"
+            android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".selectlistexcercise_user_private"
             android:theme="@style/AppTheme.NoActionbar" />
@@ -68,6 +82,10 @@
         <activity
             android:name=".Login_user"
             android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionbar" />
+        <activity
+            android:name=".Home_User"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -75,10 +93,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Home_User"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".Totalkcal_User"
             android:screenOrientation="portrait"
