--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+
 apply plugin: 'com.google.gms.google-services'
 
 android {
+    aaptOptions {
+        noCompress "tflite"
+    }
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
@@ -30,7 +34,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -39,7 +43,7 @@ dependencies {
 
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
     implementation 'com.android.support:appcompat-v7:29.1.1'
-    implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
@@ -51,5 +55,12 @@ dependencies {
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
     implementation 'br.com.simplepass:loading-button-android:2.1.5'
 
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
+    implementation 'com.google.firebase:firebase-ml-vision-automl:18.0.3'
 
+
+
+
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
