--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
+
         <activity android:name=".list_saveedit_excercise_menu_private"
             android:theme="@style/AppTheme.NoActionbar"
             ></activity>
@@ -70,7 +73,9 @@
             android:name=".selectlistfood_user"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan" >
+
+        </activity>
         <activity
             android:name=".edit_information"
             android:screenOrientation="portrait"
@@ -95,6 +100,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar">
 
+
         </activity>
         <activity
             android:name=".Totalkcal_User"
@@ -113,6 +119,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar" />
         <activity android:name=".MainActivity" />
+
+        <meta-data
+            android:name="com.google.android.gms.vision.DEPENDENCIES"
+            android:value="label" />
     </application>
 
 </manifest>
