--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-
-        <activity android:name=".list_saveedit_excercise_menu_private"
-            android:theme="@style/AppTheme.NoActionbar"
-            ></activity>
-        <activity android:name=".model.modelSelectExcercise_Private"
-            android:theme="@style/AppTheme.NoActionbar"/>
-        <activity android:name=".list_edit_excercise_private"
-            android:theme="@style/AppTheme.NoActionbar"
-            />
+        <activity android:name=".dashboard_user"></activity>
+        <activity
+            android:name=".list_saveedit_excercise_menu_private"
+            android:theme="@style/AppTheme.NoActionbar" />
+        <activity
+            android:name=".model.modelSelectExcercise_Private"
+            android:theme="@style/AppTheme.NoActionbar" />
+        <activity
+            android:name=".list_edit_excercise_private"
+            android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".list_saveedit_food_menu_private"
             android:theme="@style/AppTheme.NoActionbar" />
@@ -73,9 +72,7 @@
             android:name=".selectlistfood_user"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar"
-            android:windowSoftInputMode="adjustPan" >
-
-        </activity>
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".edit_information"
             android:screenOrientation="portrait"
@@ -87,21 +84,17 @@
         <activity
             android:name=".Login_user"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" >
+            android:theme="@style/AppTheme.NoActionbar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".Home_User"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar">
-
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionbar"></activity>
         <activity
             android:name=".Totalkcal_User"
             android:screenOrientation="portrait"
