refactor(Mobile):keep detail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -112,11 +112,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".Home_User"
@@ -137,8 +133,18 @@
         <activity
             android:name=".connect_user"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" />
-        <activity android:name=".MainActivity" />
+            android:theme="@style/AppTheme.NoActionbar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity"
+
+            >
+
+        </activity>
 
         <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
