refactor(Mobile):up date datepicker and keep detail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,13 @@
             android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".dashboard_user"
-            android:theme="@style/AppTheme.NoActionbar" />
+            android:theme="@style/AppTheme.NoActionbar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".list_saveedit_excercise_menu_private"
             android:screenOrientation="portrait"
@@ -136,11 +142,7 @@
             android:name=".connect_user"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
 
