refactor(Mobile):keep detail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,11 +28,7 @@
         <activity
             android:name=".dashboard_user"
             android:theme="@style/AppTheme.NoActionbar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".list_saveedit_excercise_menu_private"
@@ -140,9 +136,14 @@
             android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".connect_user"
+            android:noHistory="true"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
 
