--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".savedataexcercise_user_private"
+        <activity android:name=".testAPI24_animation"></activity>
+        <activity
+            android:name=".savedataexcercise_user_private"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar"
-            ></activity>
-        <activity android:name=".savedatafood_user_private"
+            android:theme="@style/AppTheme.NoActionbar" />
+        <activity
+            android:name=".savedatafood_user_private"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar"
-            />
+            android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".addfood_user_private_Bsetting"
             android:screenOrientation="portrait"
@@ -27,9 +28,7 @@
             android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".dashboard_user"
-            android:theme="@style/AppTheme.NoActionbar" >
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionbar"></activity>
         <activity
             android:name=".list_saveedit_excercise_menu_private"
             android:screenOrientation="portrait"
@@ -109,11 +108,7 @@
         <activity
             android:name=".edit_information"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" >
-
-
-
-        </activity> <!-- Theme.AppCompat.DayNight.NoActionBar -->
+            android:theme="@style/AppTheme.NoActionbar"></activity> <!-- Theme.AppCompat.DayNight.NoActionBar -->
         <activity
             android:name=".setting_user"
             android:screenOrientation="portrait"
@@ -125,9 +120,13 @@
         <activity
             android:name=".Home_User"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" >
+            android:theme="@style/AppTheme.NoActionbar">
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
         <activity
@@ -137,10 +136,7 @@
         <activity
             android:name=".Register_Infirmation"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionbar" >
-
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionbar"></activity>
         <activity
             android:name=".Register_User"
             android:screenOrientation="portrait"
@@ -150,11 +146,7 @@
             android:noHistory="true"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
 
