--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".dashboard_user"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar"></activity>
         <activity
             android:name=".list_saveedit_excercise_menu_private"
@@ -50,9 +51,11 @@
             android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".addexcerciser_user_private"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".selectlistexcercise_user_private"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionbar" />
         <activity
             android:name=".addfood_user_private"
